<resources>
    <string name="app_name">Ex1</string>
    <string name="_000">000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_speed">Select Speed:</string>
    <string name="select_mode">Select Mode:</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="buttons">Buttons</string>
    <string name="sensors">Sensors</string>
    <string name="start">Start</string>
    <string name="go_to_records">Go To Records</string>
</resources>